apps/base/media/radarr/service-4k.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-4k
  labels:
    app: radarr-4k
spec:
  selector:
    app: radarr-4k
  ports:
    - name: http
      port: 7878
      protocol: TCP
      targetPort: http
