apps/base/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  selector:
    app: radarr
  ports:
    - name: http
      port: 7878
      protocol: TCP
      targetPort: http
