apps/base/media/radarr/ingress-4k.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-method: 'GET'
    nginx.ingress.kubernetes.io/auth-url: 'http://authelia.authelia.svc.cluster.local:9091/api/authz/auth-request'
    nginx.ingress.kubernetes.io/auth-signin: 'https://auth.christensencloud.us?rm=$request_method'
    nginx.ingress.kubernetes.io/auth-response-headers: 'Remote-User,Remote-Name,Remote-Groups,Remote-Email'
  name: radarr-4k
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: radarr-4k.christensencloud.us
      http:
        paths:
          - backend:
              service:
                name: radarr-4k
                port:
                  number: 7878
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - radarr-4k.christensencloud.us
      secretName: radarr-4k-christensencloud.us-tls
